test_suite/tests/macros/ui/provide_bind_invalid_tokens.rs
use dilib::provide;

#[derive(Default)]
#[provide(bind=123)]
struct MyStruct {}

fn main() {}